mikrotic connect- dummy

--- a/templates/entercode.html
+++ b/templates/entercode.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Test field</h1>
+    <h1>Enter code</h1>
     <body>
-        {{code}}
+     
         <form action="">
             <label for="">Enter your code to unlock</label><input type="text" name="code" id="">
+            <button type="submit"> Submit</button>
         </form>
     </body>
 
