--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Test field</h1>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  
     <body>
-        {{code}}
-        <form action="">
-            <label for="">Enter your code to unlock</label><input type="text" name="code" id="">
-        </form>
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-md-auto">
+                <h1>Tech Digs</h1>
+                <div class="card">
+                    <div class="cardhead">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 
 </head>
 <body>
     
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </html>
 {% endblock %}
