--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
                     </div>
                 </div>
             </div>
+            <div class="col"></div>
         </div>
     </div>
     </body>
