--- a/templates/mpesa.html
+++ b/templates/mpesa.html
@@ -18,6 +18,9 @@
                         <div class="cardbody" >
                             <form action="Post">
                                 {% csrf_token %}
+                                <label for="namba">Enter your number to pay</label>
+                                <input type="number" name="reciever" id="reciever">
+                                <button type="submit" class=" btn btn-primary">submit</button>
                                 
                             </form>
                         </div>
