--- a/templates/mpesa.html
+++ b/templates/mpesa.html
@@ -14,8 +14,11 @@
 
                 </div>
                 <div class="col-md-auto"style=background-color:#ADD8E6>
+                
                     <div class="card" style="margin-top: 400px;">
+                            <h1>Tech digs</h1>
                         <div class="cardbody" >
+
                             <form action="Post">
                                 {% csrf_token %}
                                 <label for="namba">Enter your number to pay</label>
