--- a/templates/index.html
+++ b/templates/index.html
@@ -2,32 +2,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  
-    <body>
-    <div class="container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-md-auto">
-                <h1>Tech Digs</h1>
-                <div class="card">
-                    <div class="cardhead">
-                        
-                    </div>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Digs Hotspot</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+</head>
+
+<body style="background-color: #f1f6fb;">
+    <div class="container py-5">
+        <h1 class="text-center mb-4 text-primary">Tech Digs Net</h1>
+         {% for package in packages %}
+        <div class="row justify-content-center g-4">
+       
+        
+            <div class="col-md-4">
+                <div class="card shadow-lg border-0 h-100">
+                    <div class="card-body text-center">
+                    <h5 class="card-title"><b>Ksh</b>{{package.amount}}</h5>
+                    <p class="card-text">for</p>
+                    <p class="card-text"><b>Time:</b>{{package.duration}} hrs</p>
+                   
+                    <a href="{% url 'confirm' package.id %}" class="btn btn-primary">Buy</a>
                 </div>
             </div>
-            <div class="col"></div>
+        
         </div>
+        {% endfor %}
     </div>
-    </body>
+ 
 
-</head>
-<body>
-    
-</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+</body>
 </html>
 {% endblock %}
