--- a/templates/mpesa.html
+++ b/templates/mpesa.html
@@ -7,34 +7,31 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <body>
-        <div class="container">
+        <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="card shadow-lg p-4" style="max-width: 400px; width: 100%; border-radius: 1rem; background-color: #f8f9fa;">
+      
+      <div class="text-center mb-4">
+        <h2 class="fw-bold text-primary">Tech Digs</h2>
+        <h2 class="text-center">Pay for: Ksh {{ package.amount }}</h2>
+      </div>
 
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col-md-auto"style=background-color:#ADD8E6>
-                
-                    <div class="card" style="margin-top: 400px;">
-                            <h1>Tech digs</h1>
-                        <div class="cardbody" >
-
-                            <form action="Post">
-                                {% csrf_token %}
-                                <label for="namba">Enter your number to pay</label>
-                                <input type="number" name="reciever" id="reciever">
-                                <button type="submit" class=" btn btn-primary">submit</button>
-                                
-                            </form>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
+      <form  action="{%url 'payment' package.id %}" method="POST">
+        {% csrf_token %}
+        
+        <div class="mb-3">
+          <input type="hidden" name="amount" value="{{ package.amount }}">
+          <label for="reciever" class="form-label">Enter your phone number</label>
+          
+          <input type="tel" class="form-control" id="reciever" name="reciever" placeholder="e.g. 2547XXXXXXXX" required>
         </div>
+
+        <div class="d-grid">
+          <button type="submit" class="btn btn-primary">Pay</Button>
+        </div>
+
+      </form>
+    </div>
+  </div>
      
      
     </body>
