--- a/templates/index.html
+++ b/templates/index.html
@@ -10,39 +10,50 @@
 
 <body style="background-color: #f1f6fb;">
     
-      <div class="container py-5">
-    <div class="row justify-content-center align-items-start">
+    <div class="container py-5">
+        <div class="row justify-content-center align-items-start">
       
-      <div class="col-md-6">
-        <h1 class="display-3 fw-bold text-center text-primary mb-5 mt-4 text-uppercase">Tech Digs Net</h1>
-        <div class="row g-4 justify-content-center">
-          {% for package in packages %}
-          <div class="col-md-10">
-            <div class="card shadow-lg border-0 h-100 text-center">
-              <div class="card-body">
-                <h5 class="card-title"><b>Ksh</b> {{ package.amount }}</h5>
-                <p class="card-text">for</p>
-                <p class="card-text"><b>Time:</b> {{ package.duration }} hrs (unlimited net)</p>
-                <a href="{% url 'confirm' package.id %}" class="btn btn-primary">Buy</a>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
+                <div class="col-md-6">
+                    <h1 class="display-3 fw-bold text-center text-primary mb-5 mt-4 text-uppercase">Tech Digs Net</h1>
+                    <div class="row g-4 justify-content-center">
+                    {% for package in packages %}
+                    <div class="col-md-10">
+                        <div class="card shadow-lg border-0 h-100 text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Ksh</b> {{ package.amount }}</h5>
+                            <p class="card-text">for</p>
+                            <p class="card-text"><b>Time:</b> {{ package.duration }} hrs (unlimited net)</p>
+                            <a href="{% url 'confirm' package.id %}" class="btn btn-primary">Buy</a>
+                        </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    </div>
+                </div>
 
     
-      <div class="col-md-4 ms-auto">
-        <h3 class="text-primary py-3">Instructions</h3>
-        <ul class="list-group ">
-          <li class="list-group-item py-3 mb-3">Select your desired package</li>
-          <li class="list-group-item py-3 mb-3">Enter your phone number on next screen</li>
-          <li class="list-group-item py-3 mb-3">enter your m-pesa pin</li>
-          <li class="list-group-item py-3 mb-3">Please wait to be connected</li>
-        </ul>
-      </div>
+                <div class="col-md-4 ms-auto">
+                    <h3 class="text-primary py-3">Instructions</h3>
+                    <ul class="list-group ">
+                    <li class="list-group-item py-3 ">Select your desired package</li>
+                    <li class="list-group-item py-3 ">Enter your phone number on next screen</li>
+                    <li class="list-group-item py-3 ">enter your m-pesa pin</li>
+                    <li class="list-group-item py-3 ">Please wait to be connected</li>
+                    </ul>
+
+                    <div class="mt-5 mb-5">
+                        <h4>Reconnect back to system</h4>
+                        <form  class="p-4 border rounded shadow-sm bg-white">
+                            <div class="mb-3">
+                                <label for="inputText" class="form-label">Enter The M-pesa code</label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16"><path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/></svg>
+                                <input type="text" class="form-control" id="inputText" name="inputText" placeholder="Type something here...">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>                                
+                </div>
+        </div>
     </div>
-  </div>
  
 
 
