--- a/templates/mpesa.html
+++ b/templates/mpesa.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>m-pesa payment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <body>
         <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="card shadow-lg p-4" style="max-width: 400px; width: 100%; border-radius: 1rem; background-color: #f8f9fa;">
       
       <div class="text-center mb-4">
-        <h2 class="fw-bold text-primary">Tech Digs</h2>
+        <h2 class="fw-bold text-danger">pay with m-pesa</h2>
         <h2 class="text-center">Pay for: Ksh {{ package.amount }}</h2>
       </div>
 
@@ -22,11 +22,11 @@
           <input type="hidden" name="amount" value="{{ package.amount }}">
           <label for="reciever" class="form-label">Enter your phone number</label>
           
-          <input type="tel" class="form-control" id="reciever" name="reciever" placeholder="e.g. 2547XXXXXXXX" required>
+          <input type="tel" class="form-control" id="reciever" name="reciever" placeholder="e.g. 07xxxxxxxx" required>
         </div>
 
         <div class="d-grid">
-          <button type="submit" class="btn btn-primary">Pay</Button>
+          <button type="submit" class="btn btn-danger">Pay</Button>
         </div>
 
       </form>
